--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing = "20">
             <tr>
-                <td><image src ="images/6d397882-4a90-484f-bfe4-af71dd86e512.jpg" height = "175" width = "175"></image></td>
+                <td><image src ="./6d397882-4a90-484f-bfe4-af71dd86e512.jpg" height = "175" width = "175"></image></td>
                 <td> <h1><strong>Vyom Tiwari</strong></h1>
                     <p><strong>Undergraduate Student(2024)</strong></p>
                     <p><b><a href = http://srmcem.ac.in/btechcs.aspx>Computer Science Department</a></b></p>
